[gd_scene load_steps=10 format=3 uid="uid://cdrmma5vareqi"]

[ext_resource type="Texture2D" uid="uid://bk3yhspj80rk8" path="res://assets/bg1500.png" id="1_gl5co"]
[ext_resource type="Script" path="res://scenes/levels/level.gd" id="1_hks4d"]
[ext_resource type="Texture2D" uid="uid://b4jnndh3ft0nh" path="res://assets/bg1000.png" id="1_sypla"]
[ext_resource type="PackedScene" uid="uid://ownfr2ykj87n" path="res://scenes/player/player.tscn" id="2_40adk"]
[ext_resource type="Script" path="res://scenes/levels/TileMap.gd" id="3_uvrpr"]
[ext_resource type="PackedScene" uid="uid://3mytbyuhtgmk" path="res://scenes/user interface/ui.tscn" id="5_f2jl8"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bioi6"]
texture = ExtResource("1_sypla")
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, 65.0834, 100, 64.3467, 100, 100, -100, 100)
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, 65.0834, 100, 64.3467, 100, 100, -100, 100)
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, 65.0834, 100, 64.3467, 100, 100, -100, 100)
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, 65.0834, 100, 64.3467, 100, 100, -100, 100)
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-100, 65.0834, 100, 64.3467, 100, 100, -100, 100)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uxfmx"]
texture = ExtResource("1_gl5co")
separation = Vector2i(8, 0)
texture_region_size = Vector2i(200, 200)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
4:0/0 = 0
4:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:0/0/physics_layer_0/angular_velocity = 0.0
5:0/0 = 0
5:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:0/0/physics_layer_0/angular_velocity = 0.0
6:0/0 = 0
6:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
4:1/0 = 0
4:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:1/0/physics_layer_0/angular_velocity = 0.0
5:1/0 = 0
5:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:1/0/physics_layer_0/angular_velocity = 0.0
6:1/0 = 0
6:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
4:2/0 = 0
4:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:2/0/physics_layer_0/angular_velocity = 0.0
5:2/0 = 0
5:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:2/0/physics_layer_0/angular_velocity = 0.0
6:2/0 = 0
6:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0
4:3/0 = 0
4:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:3/0/physics_layer_0/angular_velocity = 0.0
5:3/0 = 0
5:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:3/0/physics_layer_0/angular_velocity = 0.0
6:3/0 = 0
6:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:3/0/physics_layer_0/angular_velocity = 0.0
0:4/0 = 0
0:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:4/0/physics_layer_0/angular_velocity = 0.0
1:4/0 = 0
1:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:4/0/physics_layer_0/angular_velocity = 0.0
2:4/0 = 0
2:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:4/0/physics_layer_0/angular_velocity = 0.0
3:4/0 = 0
3:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:4/0/physics_layer_0/angular_velocity = 0.0
4:4/0 = 0
4:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:4/0/physics_layer_0/angular_velocity = 0.0
5:4/0 = 0
5:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:4/0/physics_layer_0/angular_velocity = 0.0
6:4/0 = 0
6:4/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:4/0/physics_layer_0/angular_velocity = 0.0
0:5/0 = 0
0:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:5/0/physics_layer_0/angular_velocity = 0.0
1:5/0 = 0
1:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:5/0/physics_layer_0/angular_velocity = 0.0
2:5/0 = 0
2:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:5/0/physics_layer_0/angular_velocity = 0.0
3:5/0 = 0
3:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:5/0/physics_layer_0/angular_velocity = 0.0
4:5/0 = 0
4:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:5/0/physics_layer_0/angular_velocity = 0.0
5:5/0 = 0
5:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:5/0/physics_layer_0/angular_velocity = 0.0
6:5/0 = 0
6:5/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:5/0/physics_layer_0/angular_velocity = 0.0
0:6/0 = 0
0:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:6/0/physics_layer_0/angular_velocity = 0.0
1:6/0 = 0
1:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:6/0/physics_layer_0/angular_velocity = 0.0
2:6/0 = 0
2:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:6/0/physics_layer_0/angular_velocity = 0.0
3:6/0 = 0
3:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:6/0/physics_layer_0/angular_velocity = 0.0
4:6/0 = 0
4:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
4:6/0/physics_layer_0/angular_velocity = 0.0
5:6/0 = 0
5:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
5:6/0/physics_layer_0/angular_velocity = 0.0
6:6/0 = 0
6:6/0/physics_layer_0/linear_velocity = Vector2(0, 0)
6:6/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_kegg8"]
tile_size = Vector2i(200, 200)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 3
sources/3 = SubResource("TileSetAtlasSource_bioi6")
sources/6 = SubResource("TileSetAtlasSource_uxfmx")

[node name="Level" type="Node2D"]
script = ExtResource("1_hks4d")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_kegg8")
format = 2
layer_0/tile_data = PackedInt32Array(196608, 3, 4, 196609, 65539, 4, 196610, 131075, 4, 196611, 196611, 4, 196612, 262147, 4, 196613, 3, 4, 196614, 65539, 4, 262143, 262147, 4, -65536, 3, 0, 0, 3, 1, 65536, 3, 2, 131072, 3, 3, -65531, 3, 0, 5, 3, 1, 65541, 3, 2, 131077, 3, 3, -1, 262147, 0, 65535, 262147, 1, 131071, 262147, 2, 196607, 262147, 3, -65532, 262147, 0, 4, 262147, 1, 65540, 262147, 2, 131076, 262147, 3, -65535, 65539, 0, 1, 65539, 1, 65537, 65539, 2, 131073, 65539, 3, -65534, 131075, 0, 2, 131075, 1, 65538, 131075, 2, 131074, 131075, 3, -65533, 196611, 0, 3, 196611, 1, 65539, 196611, 2, 131075, 196611, 3, -65530, 65539, 0, 6, 65539, 1, 65542, 65539, 2, 131078, 65539, 3, -131066, 131075, 0, -131067, 131075, 0, -131068, 131075, 0, -131069, 131075, 0, -131070, 131075, 0, -131071, 131075, 0, -131072, 131075, 0, -65537, 131075, 0, -196602, 131075, 0, -196603, 131075, 0, -196604, 131075, 0, -196605, 131075, 0, -196606, 131075, 0, -196607, 131075, 0, -196608, 131075, 0, -131073, 131075, 0, -196609, 131075, 0, -262144, 131075, 0, -262143, 131075, 0, -262142, 131075, 0, -262141, 131075, 0, -262140, 131075, 0, -262139, 131075, 0, -262138, 131075, 0, -327674, 131075, 0, -327675, 131075, 0, -327676, 131075, 0, -327677, 131075, 0, -327678, 131075, 0, -327679, 131075, 0, -327680, 131075, 0, -262145, 131075, 0, 262142, 196611, 4, 262141, 131075, 4, 262140, 65539, 4, 196606, 196611, 3, -4, 65539, 0, 65532, 65539, 1, 131068, 65539, 2, 196604, 65539, 3, -3, 131075, 0, 65533, 131075, 1, 131069, 131075, 2, 196605, 131075, 3, -2, 196611, 0, 65534, 196611, 1, 131070, 196611, 2, -5, 3, 0, 65531, 3, 1, 131067, 3, 2, 196603, 3, 3, 262139, 3, 4, -262149, 131075, 0, -196613, 131075, 0, -131077, 131075, 0, -65541, 131075, 0, -262148, 131075, 0, -196612, 131075, 0, -131076, 131075, 0, -65540, 131075, 0, -262147, 131075, 0, -196611, 131075, 0, -131075, 131075, 0, -65539, 131075, 0, -262146, 131075, 0, -196610, 131075, 0, -131074, 131075, 0, -65538, 131075, 0, -11, 262147, 0, 65525, 262147, 1, 131061, 262147, 2, 196597, 262147, 3, 262133, 262147, 4, -10, 3, 0, 65526, 3, 1, 131062, 3, 2, 196598, 3, 3, 262134, 3, 4, -9, 65539, 0, 65527, 65539, 1, 131063, 65539, 2, 196599, 65539, 3, 262135, 65539, 4, -8, 131075, 0, 65528, 131075, 1, 131064, 131075, 2, 196600, 131075, 3, 262136, 131075, 4, -7, 196611, 0, 65529, 196611, 1, 131065, 196611, 2, 196601, 196611, 3, 262137, 196611, 4, -6, 262147, 0, 65530, 262147, 1, 131066, 262147, 2, 196602, 262147, 3, 262138, 262147, 4, -65529, 131075, 0, 7, 131075, 1, 65543, 131075, 2, 131079, 131075, 3, 196615, 131075, 4, -65528, 196611, 0, 8, 196611, 1, 65544, 196611, 2, 131080, 196611, 3, 196616, 196611, 4, -65527, 262147, 0, 9, 262147, 1, 65545, 262147, 2, 131081, 262147, 3, 196617, 262147, 4, -65526, 3, 0, 10, 3, 1, 65546, 3, 2, 131082, 3, 3, 196618, 3, 4, -65525, 65539, 0, 11, 65539, 1, 65547, 65539, 2, 131083, 65539, 3, 196619, 65539, 4, -65524, 131075, 0, 12, 131075, 1, 65548, 131075, 2, 131084, 131075, 3, 196620, 131075, 4, -65523, 196611, 0, 13, 196611, 1, 65549, 196611, 2, 131085, 196611, 3, 196621, 196611, 4, -65522, 262147, 0, 14, 262147, 1, 65550, 262147, 2, 131086, 262147, 3, 196622, 262147, 4, -327673, 131075, 0, -262137, 131075, 0, -196601, 131075, 0, -131065, 131075, 0, -327672, 131075, 0, -262136, 131075, 0, -196600, 131075, 0, -131064, 131075, 0, -327671, 131075, 0, -262135, 131075, 0, -196599, 131075, 0, -131063, 131075, 0, -327670, 131075, 0, -262134, 131075, 0, -196598, 131075, 0, -131062, 131075, 0, -327669, 131075, 0, -262133, 131075, 0, -196597, 131075, 0, -131061, 131075, 0, -327668, 131075, 0, -262132, 131075, 0, -196596, 131075, 0, -131060, 131075, 0, -327667, 131075, 0, -262131, 131075, 0, -196595, 131075, 0, -131059, 131075, 0, -327666, 131075, 0, -262130, 131075, 0, -196594, 131075, 0, -131058, 131075, 0, -262155, 131075, 0, -196619, 131075, 0, -131083, 131075, 0, -65547, 131075, 0, -262154, 131075, 0, -196618, 131075, 0, -131082, 131075, 0, -65546, 131075, 0, -262153, 131075, 0, -196617, 131075, 0, -131081, 131075, 0, -65545, 131075, 0, -262152, 131075, 0, -196616, 131075, 0, -131080, 131075, 0, -65544, 131075, 0, -262151, 131075, 0, -196615, 131075, 0, -131079, 131075, 0, -65543, 131075, 0, -262150, 131075, 0, -196614, 131075, 0, -131078, 131075, 0, -65542, 131075, 0, -65521, 3, 0, 15, 3, 1, 65551, 3, 2, 131087, 3, 3, 196623, 3, 4, -65520, 65539, 0, 16, 65539, 1, 65552, 65539, 2, 131088, 65539, 3, 196624, 65539, 4, -327665, 131075, 0, -262129, 131075, 0, -196593, 131075, 0, -131057, 131075, 0, -327664, 131075, 0, -262128, 131075, 0, -196592, 131075, 0, -131056, 131075, 0, 327669, 196614, 0, 393205, 196614, 0, 458741, 196614, 0, 327670, 196614, 0, 393206, 196614, 0, 458742, 196614, 0, 327671, 196614, 0, 393207, 196614, 0, 458743, 196614, 0, 327672, 196614, 0, 393208, 196614, 0, 458744, 196614, 0, 327673, 196614, 0, 393209, 196614, 0, 458745, 196614, 0, 327674, 196614, 0, 393210, 196614, 0, 458746, 196614, 0, 327675, 196614, 0, 393211, 196614, 0, 458747, 65539, 4, 327676, 196614, 0, 393212, 196614, 0, 458748, 131075, 4, 327677, 196614, 0, 393213, 196614, 0, 458749, 196611, 4, 327678, 196614, 0, 393214, 196614, 0, 458750, 65539, 4, 327679, 196614, 0, 393215, 196614, 0, 458751, 196614, 0, 262144, 196614, 0, 327680, 196614, 0, 393216, 196614, 0, 262145, 196614, 0, 327681, 196614, 0, 393217, 196614, 0, 262146, 196614, 0, 327682, 196614, 0, 393218, 196614, 0, 262147, 196614, 0, 327683, 196614, 0, 393219, 196614, 0, 262148, 196614, 0, 327684, 196614, 0, 393220, 196614, 0, 262149, 196614, 0, 327685, 196614, 0, 393221, 196614, 0, 262150, 196614, 0, 327686, 196614, 0, 393222, 196614, 0, 262151, 196614, 0, 327687, 196614, 0, 393223, 196614, 0, 262152, 196614, 0, 327688, 196614, 0, 393224, 196614, 0, 262153, 196614, 0, 327689, 196614, 0, 393225, 196614, 0, 262154, 196614, 0, 327690, 196614, 0, 393226, 196614, 0, 262155, 196614, 0, 327691, 196614, 0, 393227, 196614, 0, 262156, 196614, 0, 327692, 196614, 0, 393228, 196614, 0, 262157, 196614, 0, 327693, 196614, 0, 393229, 196614, 0, 262158, 196614, 0, 327694, 196614, 0, 393230, 196614, 0, 262159, 196614, 0, 327695, 196614, 0, 393231, 196614, 0, 262160, 196614, 0, 327696, 196614, 0, 393232, 196614, 0)
script = ExtResource("3_uvrpr")

[node name="LeftEdge" type="VisibleOnScreenNotifier2D" parent="TileMap"]
position = Vector2(-2006, 306)
scale = Vector2(2.018, 50)

[node name="RightEdge" type="VisibleOnScreenNotifier2D" parent="TileMap"]
position = Vector2(3032, 299)
scale = Vector2(2, 50)

[node name="Player" parent="." instance=ExtResource("2_40adk")]
top_level = true
position = Vector2(624, 708)

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2(0, -280)
position_smoothing_enabled = true
position_smoothing_speed = 50.0

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Objects" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(651, 715)

[node name="UI" parent="." instance=ExtResource("5_f2jl8")]

[connection signal="screen_entered" from="TileMap/LeftEdge" to="TileMap" method="_on_left_edge_screen_entered"]
[connection signal="screen_entered" from="TileMap/RightEdge" to="TileMap" method="_on_right_edge_screen_entered"]
[connection signal="player_lost" from="Player" to="." method="_on_player_player_lost"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="start_game" from="UI" to="." method="_on_ui_start_game"]
